# GLCollection

./: CMakeLists.txt  README.md
01_lighting/: 01_lighting.cpp  01_lighting.h  lighting_shader.h
01_lighting/shaders/: scene_shader.frag  scene_shader.vert
02_projector/: 02_projector.cpp  02_projector.h  projector_shader.h
02_projector/shaders/: projector.frag  projector.vert
03_gimbal_lock/: 03_gimbal_lock.cpp  03_gimbal_lock.h
04_cube_mapping/: 04_cube_mapping.cpp  04_cube_mapping.h
04_cube_mapping/samples/dynamic/: back.avi  bottom.avi  front.avi  left.avi  right.avi  top.avi
04_cube_mapping/shaders/: shader.frag  shader.vert
05_moving_point_on_bezier_curve/: 05_moving_point_on_bezier_curve.cpp  05_moving_point_on_bezier_curve.h
05_moving_point_on_bezier_curve/shaders/: shader.frag
06_bump_mapping/: 06_bump_mapping.cpp  06_bump_mapping.h  bump_mapping_shader.h
06_bump_mapping/shaders/: box_blur.comp  bump_mapping.frag  bump_mapping.vert  normal_map.comp
07_wave_simulation/: 07_wave_simulation.cpp  07_wave_simulation.h
07_wave_simulation/shaders/: wave.comp  wave_normal.comp
08_cloth_simulation/: 08_cloth_simulation.cpp  08_cloth_simulation.h  cloth_shader.h
08_cloth_simulation/shaders/: cloth.comp
09_distance_transform/: 09_distance_transform.cpp  09_distance_transform.h  distance_transform_shader.h
09_distance_transform/shaders/: distance_transform.comp  field.frag  read_texture.frag  read_texture.vert
10_shadow_mapping/: 10_shadow_mapping.cpp  10_shadow_mapping.h  shadow_shader.h
10_shadow_mapping/shaders/: shadow.frag  shadow.vert  simple.frag  simple.vert
11_ray_tracing/: 11_ray_tracing.cpp  11_ray_tracing.h  ray_tracing_shader.h
11_ray_tracing/shaders/: raytracer.comp
12_animation/: 12_animation.cpp  12_animation.h  animator.h
12_animation/shaders/: shader.frag  shader.vert
13_environment_mapping/: 13_environment_mapping.cpp  13_environment_mapping.h
13_environment_mapping/samples/objects/: tiger1.txt  tiger10.txt  tiger11.txt  tiger2.txt  tiger3.txt  tiger4.txt  tiger5.txt  (+3 more)
13_environment_mapping/shaders/: environment_map.frag  environment_map.vert  lighting.frag  lighting.vert
common/include/: base.h  camera.h  canvas.h  file_decoder.h  light.h  object.h  project_constants.h  renderer.h  shader.h  video_reader.h
common/source/: camera.cpp  canvas.cpp  file_decoder.cpp  light.cpp  object.cpp  renderer.cpp  shader.cpp  video_reader.cpp
